# neuroelectrophysiology

./: .gitignore  .gitmodules  MICE_LIST_EEG.xlsx  Manifest.toml  Project.toml  README.md  motor_evoked_potentials_extracation-new.ipynb  motor_evoked_potentials_extraction.ipynb  pyproject.toml
config/: default_config.json
mepextract/: LICENSE.txt  README.md  legacy_viewer.py  pyproject.toml
mepextract/extracting/: __init__.py  extractor.py  viewer.py
mepextract/extracting/mepextract.egg-info/: PKG-INFO  SOURCES.txt
mepextract/src/: __init__.py  extracting.py
modules/neuroephys4julia/: SessionIO.jl  analysis.jl  plot.jl  session.jl  utilities.jl
modules/openephysextract/: __init__.py  extractor.py  plot.py  preprocess.py  pyproject.toml  session.py  utilities.py  viewer.py
modules/openephysextract/openephysextract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modules/sessionIO/: Project.toml  SessionIO.jl  testSessionIO.jl  test_julia_indices.jl  test_session_bulletproof.jl
motor_evoked_potentials.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 5xFAD MEP ML.ipynb  5xFAD Resting State EEG.ipynb  5xFAD Resting State.ipynb  5xFAD-resting-state-EEG.ipynb  5xFAD-simple-processing.ipynb  HMM.ipynb  MEP workshop (task 1-2).ipynb  MEP workshop solutions.ipynb  MEP_analysis.ipynb  MEP_deeplearning.ipynb  MEP_ideation.ipynb  best_model.pth  motor_evoked_potentials_extraction.ipynb  resting_state_app.py  shiny_test.py  simplfied MEP extract.ipynb  testextract.ipynb
notebooks/.ipynb_checkpoints/: 5xFAD Resting State EEG-checkpoint.ipynb  MEP workshop (task 1-2)-checkpoint.ipynb  motor_evoked_potentials_extraction-checkpoint.ipynb
notebooks/5xFAD/: 5xFAD MEP.ipynb  5xFAD-resting-state-EEG.ipynb  5xFAD-resting-state-analysis
notebooks/workshop material/: MEP workshop (task 1-2).ipynb
openephysextract/: __init__.py  analysis.py  extractor.py  plot.py  preprocess.py  progress.py  session.py  trial.py  utilities.py
openephysextract/dashboards/: qcdashboard.py
openephysextract/openephysextract.egg-info/: PKG-INFO
projects/5xFAD/: 5xFAD-resting-state-EEG.ipynb  5xFAD-resting-state-analysis  5xFAD-resting-state-analysis.ipynb  5xFAD-resting-state-extracation.ipynb
projects/EXELU/: EXELU-neuroscope-io.jl
projects/meditation EEG/: 5-state-meditation.jl
scripts/: convert2neuroscope.py  lfpviewer_v3.py  simple_extract.py
tests/: test_viewer.py
