[build-system]
requires = ["setuptools>=61.0", "numpy", "open-ephys-python-tools", "matplotlib", "scipy", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "mepextract"
version = "1.0.1"
license = {text = "MIT"}
description = "A quick way to extract MEPs from continuous data"
authors = [
    { name = "Aswinshankar Sivalingam", email = "shankar.01@icloud.com" }
]
dependencies = [
    "numpy",
    "open-ephys-python-tools",
    "matplotlib",
    "scipy",
    "pandas"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/raknah/motor-evoked-potentials-analysis"

[tool.setuptools.packages.find]
where = ["extracting"]